# cuSZ

./: Makefile
script/: sh.codebook-test
src/: argparse.cc  cuda_error_handling.cuh  cusz.cu  cusz_dualquant.cu  cusz_workflow.cu  cusz_workflow.cuh  gather_scatter.cu  gather_scatter.cuh  huffman_workflow.cu  par_huffman.cu  par_huffman.cuh  par_huffman_gencl.cu  par_huffman_gencw.cu
test/: CMakeLists.txt
test/src/: test_huffbook.cu
